errors_stable_check_final.txt
    Checking burn-cubecl v0.21.0-pre.2
   Compiling twister v0.5.0 (S:\twister)
warning: twister@0.5.0: warning: Exported component 'HapticTestButton' doesn't inherit Window. No code will be generated for it
warning: twister@0.5.0:   --> S:\twister\ui\applets\ps5_deck.slint:18:18
warning: twister@0.5.0:    |
warning: twister@0.5.0: 18 | export component HapticTestButton inherits Rectangle {
warning: twister@0.5.0:    |                  ^^^^^^^^^^^^^^^^
warning: twister@0.5.0:    |
warning: twister@0.5.0: warning: Exported component 'RingMeter' doesn't inherit Window. No code will be generated for it
warning: twister@0.5.0:   --> S:\twister\ui\applets\ps5_deck.slint:81:18
warning: twister@0.5.0:    |
warning: twister@0.5.0: 81 | export component RingMeter inherits Rectangle {
warning: twister@0.5.0:    |                  ^^^^^^^^^
warning: twister@0.5.0: warning: Exported component 'ValueBar' doesn't inherit Window. No code will be generated for it
warning: twister@0.5.0:   --> S:\twister\ui\applets\ps5_deck.slint:47:18
warning: twister@0.5.0:    |
warning: twister@0.5.0: 47 | export component ValueBar inherits Rectangle {
warning: twister@0.5.0:    |                  ^^^^^^^^
    Checking burn-wgpu v0.21.0-pre.2
    Checking burn v0.21.0-pre.2
    Checking burn-onnx v0.21.0-pre.1
    Checking burn-import v0.21.0-pre.1
error[E0761]: file for module `mamba` found at both "src\mamba.rs" and "src\mamba\mod.rs"
  --> src\lib.rs:30:1
   |
30 | pub mod mamba;
   | ^^^^^^^^^^^^^^
   |
   = help: delete or rename one of them to remove the ambiguity

error: unexpected closing delimiter: `}`
   --> src\ml\timegnn_trainer.rs:965:5
    |
949 |         for loss in &losses {
    |                             - this opening brace...
...
952 |         }
    |         - ...matches this closing brace
...
965 |     }
    |     ^ unexpected closing delimiter

For more information about this error, try `rustc --explain E0761`.
warning: twister@0.5.0: warning: Exported component 'HapticTestButton' doesn't inherit Window. No code will be generated for it
warning: twister@0.5.0:   --> S:\twister\ui\applets\ps5_deck.slint:18:18
warning: twister@0.5.0:    |
warning: twister@0.5.0: 18 | export component HapticTestButton inherits Rectangle {
warning: twister@0.5.0:    |                  ^^^^^^^^^^^^^^^^
warning: twister@0.5.0:    |
warning: twister@0.5.0: warning: Exported component 'RingMeter' doesn't inherit Window. No code will be generated for it
warning: twister@0.5.0:   --> S:\twister\ui\applets\ps5_deck.slint:81:18
warning: twister@0.5.0:    |
warning: twister@0.5.0: 81 | export component RingMeter inherits Rectangle {
warning: twister@0.5.0:    |                  ^^^^^^^^^
warning: twister@0.5.0: warning: Exported component 'ValueBar' doesn't inherit Window. No code will be generated for it
warning: twister@0.5.0:   --> S:\twister\ui\applets\ps5_deck.slint:47:18
warning: twister@0.5.0:    |
warning: twister@0.5.0: 47 | export component ValueBar inherits Rectangle {
warning: twister@0.5.0:    |                  ^^^^^^^^
error: could not compile `twister` (lib) due to 2 previous errors
